# HyperStaq

./: CMakeLists.txt  build.sh
.claude/: settings.local.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
